CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.2:
 8: (2010-09-30)
  move ucar.unidata.util completely to unidataCommon for now
  Grib2: new way to calculate intervals, works even for NDFD 
  Grib2 PDS: add template 6, 10
  GridHorizCoordSys, Polar Stereographic : look for GridDefRecord.LAD, set scale accordingly.
  remove error messsage in GribPDSParamTable; return false on file not found
  opendap performance improvements (~36% on opening dataset)
  Grib1: add table 7-4-128
  Grib1 Time Range Indicator 123, 124
  ToolsUI PointFeature: remove structure hashCode in column 0
 7: (2010-09-27)
  ToolsUI : Grib1 Tables Viewer
  special hack for avhrr OI-V2 files, need zlev to be recognized as HEIGHT coord
  cdmremote works for full netcdf-4 data model
  FeatureDataset inner and outer Ncml
  Set cacheSize for coordinate variable == 40K
 6: (2010-09-21)
  Remove Date from GridIndexToNC "history" attribute.
  ToolsUI : allow http: argument to directly open a dods URL
  FmrcInvLite.GridInventory now checks for intervals correctly
  CoordinateAxis1D.makeBounds() - check for ordering, dont accept equality
 5: (2010-09-17)
  ArrayStructureBB.setOffsets() also calls setStructureSize(), does all nested members.
  BUFR MessageUncompressedDataReader: bug in deeply nested structures
  FeatureCollectionConfig.ProtoChoice : add Run, with param = run hour
  Calendar.HOUR should be Calendar.HOUR_OF_DAY everywhere
  GribIOSP: raf was not setting endianess
  Fmrc : integrate time intervals
  M3IO : add projection types 6,7,8,9,10 (from plessel.todd@epa.gov)
  ToolsUI: WMO grib code tables UI
  NetcdfDataset.wrap() creates real wrapper when enhancement needed - to not munge cached file
  GridDataset always uses default enhance mode.
  CFPoint: bug when feature id was a char type
  dual pole radar changes
  Remove Indexing cruft
  IOSP: Replace Index with IndexLong to deal with very large files